--- a/frontend/todo-app/package.json
+++ b/frontend/todo-app/package.json
@@ -7,15 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
+    "jquery": "^3.6.4",
+    "popper.js": "^1.16.1",
     "vue": "^3.2.13",
-    "vue-class-component": "^8.0.0-0",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "typescript": "~4.5.5"
   }
